--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,14 @@ dependencies {
     implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.5.0' // swagger
     implementation group: 'io.swagger', name: 'swagger-annotations', version: '1.6.14' // swagger annotation
 
+    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor" // configuration
+
+    implementation 'io.jsonwebtoken:jjwt-api:0.12.5' // JWT
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'
+
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.11.0' // gson
+
 }
 
 tasks.named('test') {
